<resources>
    <string name="app_name">FernandezIker1Eva</string>

    <string name="correo">Email: </string>
    <string name="asunto">Asunto: </string>
    <string name="titulo">Titulo: </string>
    <string name="puntuacion">Puntuación: </string>
    <string name="contenido">Contenido: </string>
    <string name="enviar">Enviar </string>

    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>

    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="multiplicacion">x</string>
    <string name="divison">/</string>
    <string name="invertir">INV</string>
    <string name="borrar">BORRAR</string>
    
    <string name="elevado">Xª</string>

</resources>